crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_remove_success.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<file_removed
  path="/home/user/file_to_delete.txt"
  status="completed"
>
</file_removed>
