crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_search_multiline_pattern.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="256000"
  total_lines="1"
  display_lines="1-1"
  pattern="struct.*\{.*field"
><![CDATA[types.rs:10:struct User {
    field: String]]>
</search_results>
