crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_search_no_matches.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/empty_project"
  pattern="nonexistent"
>
</search_results>
