crates/forge_main/src/app/snapshots/forge_main__app__operation__tests__fs_search_no_results.snap
---
source: crates/forge_main/src/app/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  pattern="NonExistentPattern"
>
</search_results>
